tests/rosetta/out/Smalltalk/angle-difference-between-two-bearings-2.out
Object: BlockClosure new "<0x7f66808120c0>" error: did not understand #value:at:value:at:
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
BlockClosure(Object)>>doesNotUnderstand: #value:at:value:at: (SysExcept.st:1448)
optimized [] in UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/angle-difference-between-two-bearings-2.st:8)
Array(SequenceableCollection)>>do: (SeqCollect.st:827)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/angle-difference-between-two-bearings-2.st:7)
